raneys_lemmas: Adjust css styles.
I find this to be more pleasant to read.

--- a/raneys_lemmas/html_start.html
+++ b/raneys_lemmas/html_start.html
@@ -4,5 +4,5 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
   </head>
-  <body>
-    <div style="width:800px;margin:auto">
+  <body style="font-size:120%">
+    <div style="width:760px;margin:auto">
