--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
   </head>
-  <body>
-    <div style="width:800px;margin:auto">
+  <body style="font-size:120%">
+    <div style="width:760px;margin:auto">
 <h1 id="notes-on-raneys-lemmas">Notes on Raney's Lemmas</h1>
 <p>In a 1960 paper, George Raney proved the following two lemmas on cyclic shifts of a finite sequence that contain positive-only partial sums <span class="citation">(Raney 1960)</span>. This note expands on these lemmas.</p>
 <p>I personally learned of these lemmas in chapter 7 of the book Concrete Mathematics <span class="citation">(Knuth, Patashnik, and Graham 1998)</span>, which explores their applications to generating functions.</p>
-<h2 id="exact-rules-for-finite-integer-sequences">Exact rules for finite integer sequences</h2>
+<h2 id="exact-values-for-finite-integer-sequences">Exact values for finite integer sequences</h2>
 <h3 id="lemma-1">Lemma 1</h3>
 <p>Suppose <span class="math">\(\sum_{i=1}^n x_i = 1\)</span>, where all <span class="math">\(x_i\in\mathbb{Z}\)</span>. Extend the sequence by letting <span class="math">\(x_{n+p}=x_p\)</span> for <span class="math">\(1\le p\le n\)</span>. Then there is a unique <span class="math">\(j\)</span>, <span class="math">\(1 \le j \le n\)</span>, such that</p>
 <p><span class="math">\[\sum_{i=j}^{j+k-1} x_i &gt; 0; \quad 1 \le k \le n.\]</span></p>
