raneys_lemmas: example table w positive-sum shifts

--- a/raneys_lemmas/html_start.html
+++ b/raneys_lemmas/html_start.html
@@ -3,6 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+    <style>
+      table { margin: auto; }
+    </style>
   </head>
   <body style="font-size:120%">
     <div style="width:760px;margin:auto">
