--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -10,7 +10,8 @@
   <body style="font-size:120%">
     <div style="width:760px;margin:auto">
 <h1 id="notes-on-raneys-lemmas">Notes on Raney's Lemmas</h1>
-<p>In a 1960 paper, George Raney proved the following two lemmas on cyclic shifts of a finite sequence that contain positive-only partial sums <span class="citation">(Raney 1960)</span>. This note expands on these lemmas.</p>
+<p>In a 1960 paper, George Raney proved the first two lemmas below; the lemmas suppose we have a finite sequence of numbers meeting certain constraints, and provide the number of cycle shifts that contain all-positive partial sums <span class="citation">(Raney 1960)</span>.</p>
+<p>These notes expand on the ideas behind these lemmas. The final section of these notes discusses cyclic shifts for finite sequences of independent, uniformly random values; as far as I know, the work in that section is new.</p>
 <p>I personally learned of these lemmas in chapter 7 of the book Concrete Mathematics <span class="citation">(Knuth, Patashnik, and Graham 1998)</span>, which explores their applications to generating functions.</p>
 <h2 id="exact-values-for-finite-integer-sequences">Exact values for finite integer sequences</h2>
 <h3 id="lemma-1">Lemma 1</h3>
@@ -20,9 +21,9 @@
 <p>Intuitively, we can think of such an index <span class="math">\(j\)</span> as a cyclic shift of the sequence that has partial sums that are all positive.</p>
 <p>For example, the finite sequence <span class="math">\(\langle x_1, \ldots, x_5\rangle = \langle 3, -2, 4, -1, 1 \rangle\)</span> offers <span class="math">\(j=5\)</span> as the unique shift providing <span class="math">\(\langle x_5, x_6=x_1, \ldots, x_9=x_4\rangle = \langle 1, 3, -2, 4, -5\rangle\)</span> with partial sums <span class="math">\(\langle 1, 4, 2, 6, 1\rangle\)</span> that are all positive.</p>
 <hr />
-<p>Given a sequence <span class="math">\(\langle x_1, \ldots, x_n\rangle\)</span>, it's useful to say that an index <span class="math">\(i \in \{1,\ldots, n\}\)</span> is a <em>positive-sum shift</em> if and only if the partial sums of <span class="math">\(\langle x_i, \ldots, x_n, x_1, \ldots, x_{i-1}\rangle\)</span> are all positive. Since this note focuses on finite sequences, we'll also implicitly use arbitrary indexes <span class="math">\(x_j, j\in\mathbb{Z}\)</span>, to refer to <span class="math">\(x_k\)</span> with <span class="math">\(k\in \{1, \ldots, n\}, k\equiv j \pmod n\)</span>.</p>
+<p>Given a sequence <span class="math">\(\langle x_1, \ldots, x_n\rangle\)</span>, it's useful to say that an index <span class="math">\(i \in \{1,\ldots, n\}\)</span> is a <em>positive-sum shift</em> if and only if the partial sums of <span class="math">\(\langle x_i, \ldots, x_n, x_1, \ldots, x_{i-1}\rangle\)</span> are all positive. Since these notes focus on finite sequences, we'll also implicitly use arbitrary indexes <span class="math">\(x_j, j\in\mathbb{Z}\)</span>, to refer to <span class="math">\(x_k\)</span> with <span class="math">\(k\in \{1, \ldots, n\}, k\equiv j \pmod n\)</span>.</p>
 <hr />
-<p>Raney also proved (TODO CHECK) the related result:</p>
+<p>Raney also proved the related result:</p>
 <h3 id="lemma-2">Lemma 2</h3>
 <p>Suppose <span class="math">\(\sum_{i=1}^nx_i=\ell\)</span>, where <span class="math">\(x_i\in\mathbb{Z}\)</span> and <span class="math">\(x_i \le 1\)</span> for all <span class="math">\(i\)</span>. Then exactly <span class="math">\(\ell\)</span> indexes in <span class="math">\(\{1, \ldots, n\}\)</span> are positive-sum shifts.</p>
 <hr />
