--- a/raneys_lemmas/template.html
+++ b/raneys_lemmas/template.html
@@ -11,13 +11,15 @@
       q       { quotes: "“" "”" "‘" "’"; }
       h1      { font-size: 1.5em; }
       h2      { font-size: 1.17em; }
+      img     { width: 760px; }
       .title  { font-size: 2em; font-weight: bold; }
       .author { color: #AAA; line-height: 150%; }
       .date   { color: #AAA; line-height: 150%; font-size: 0.8em; }
+      .main   { width: 760px; margin: auto; }
     </style>
   </head>
   <body>
-    <div style="width:760px;margin:auto">
+    <div class="main">
       <div class="title">$title$</div>
       <div class="author">$author$</div>
       <div class="date">$date$</div>
