--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -5,17 +5,18 @@
     <title>Notes on Raney's Lemmas</title>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
     <style>
-      body    { font-size: 120%; }
-      table   { margin: auto; }
-      code    { white-space: pre; }
-      q       { quotes: "“" "”" "‘" "’"; }
-      h1      { font-size: 1.5em; }
-      h2      { font-size: 1.17em; }
-      img     { width: 760px; }
-      .title  { font-size: 2em; font-weight: bold; }
-      .author { color: #AAA; line-height: 150%; }
-      .date   { color: #AAA; line-height: 150%; font-size: 0.8em; }
-      .main   { width: 760px; margin: auto; }
+      body     { font-size: 120%; }
+      table    { margin: auto; }
+      code     { white-space: pre; }
+      q        { quotes: "“" "”" "‘" "’"; }
+      h1       { font-size: 1.5em; }
+      h2       { font-size: 1.17em; }
+      img      { width: 760px; }
+      .title   { font-size: 2em; font-weight: bold; }
+      .author  { color: #AAA; line-height: 150%; }
+      .date    { color: #AAA; line-height: 150%; font-size: 0.8em; }
+      .main    { width: 760px; margin: auto; }
+      .caption { text-align: center; }
     </style>
   </head>
   <body>
@@ -82,11 +83,13 @@
       <p>Now let's verify that the set <span class="math">\(S = \{\min_{j \le i \le n} s_i\; |\; 1 \le j \le n\}\)</span> from (1) has size <span class="math">\(\sigma(x)\)</span>.</p>
       <p>Let <span class="math">\(j_1, \ldots, j_k\)</span> be all the positive-sum shifts with <span class="math">\(1 &lt; j_i \le n\)</span>; note that <span class="math">\(k = \sigma(x) - 1\)</span> since the trivial shift index 1 has been excluded. Let <span class="math">\(T = \{s_{j_1 - 1}, \ldots, s_{j_k - 1}, s_n\}\)</span>.</p>
       <p>Notice that <span class="math">\(j=n+1\)</span> trivially meets condition 2; combine this with the first part of the proof to see that all elements of <span class="math">\(T\)</span> meet condition 2. This guarantees that all the elements are unique, so that <span class="math">\(|T| = \sigma(x)\)</span>. This also means that <span class="math">\(T \subset S\)</span>. Finally, observe that, for any <span class="math">\(s_j \in S\)</span>, there's a largest index <span class="math">\(j&#39;\)</span> with <span class="math">\(1\le j&#39; \le n\)</span> and <span class="math">\(s_{j&#39;} = s_j\)</span>; this index <span class="math">\(j&#39;\)</span> meets condition 2, so that <span class="math">\(S\subset T\)</span>, confirming that <span class="math">\(|S| = |T| = \sigma(x)\)</span>. <span class="math">\(\Box\)</span></p>
+      <p>Property 4 lends itself to a nice visual intuition. Consider the example sequence <span class="math">\(\langle 2, -1, 2, 2, -3, 2, 1, 1, -1, -2\rangle\)</span> of length <span class="math">\(n=10\)</span>. Below is the line graph of its partial sums, starting with <span class="math">\(s_0=0\)</span>.</p>
       <div class="figure">
       <img src="images/figure1.png" alt="Line graph of the partial sums s_i of the example sequence." />
       <p class="caption"><em>Line graph of the partial sums <span class="math">\(s_i\)</span> of the example sequence.</em></p>
       </div>
-      <p>(Next: note why the specifically case matches the <span class="math">\(\sigma(x)\)</span> value; proof; example illustration for intuition)</p>
+      <p>Imagine an observer standing far to the right of the graph and looking directly to the left so they can only see along a perfectly horizontal line of sight. Below <span class="math">\(s_n\)</span>, they can only see the three points <span class="math">\(s_0\)</span>, <span class="math">\(s_2\)</span>, and <span class="math">\(s_5\)</span>. These are exactly the partial sums meeting condition (2), so that they correspond directly to all the positive-sum shifts of <span class="math">\(x\)</span>, which have indexes 1, 3, and 6.</p>
+      <p>This visual intuition — that points visible-from-the-right and below <span class="math">\(s_n\)</span> correspond exactly to the positive-sum shifts — extends to any sequence meeting the suppositions of property 4.</p>
       <h1 id="random-sequences"><span class="header-section-number">3</span> Random sequences</h1>
       <p>Add more content here.</p>
       <div class="references">
