--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -90,6 +90,17 @@
       </div>
       <p>Imagine an observer standing far to the right of the graph and looking directly to the left so they can only see along a perfectly horizontal line of sight. Below <span class="math">\(s_n\)</span>, they can only see the three points <span class="math">\(s_0\)</span>, <span class="math">\(s_2\)</span>, and <span class="math">\(s_5\)</span>. These are exactly the partial sums meeting condition (2), so that they correspond directly to all the positive-sum shifts of <span class="math">\(x\)</span>, which have indexes 1, 3, and 6.</p>
       <p>This visual intuition — that points visible-from-the-right and below <span class="math">\(s_n\)</span> correspond exactly to the positive-sum shifts — extends to any sequence meeting the suppositions of property 4.</p>
+      <p><strong>The Contraction Perspective</strong></p>
+      <p>Next we'll consider a contraction operation that may shorten a sequence <span class="math">\(x\)</span> while preserving <span class="math">\(\sigma(x)\)</span>.</p>
+      <p>Call a sequence <span class="math">\(x = \langle x_1, \ldots, x_n\rangle\)</span> <em>sum-positive</em> iff <span class="math">\(s_i &gt; 0\)</span> when <span class="math">\(i &gt; 0\)</span>. We'll say that a sequence <span class="math">\(x&#39; = \langle x&#39;_1, \ldots, x&#39;_{n-1} \rangle\)</span> is a <em>contraction</em> of the length-<span class="math">\(n\)</span> sum-positive sequence <span class="math">\(x\)</span> iff there is some index <span class="math">\(j\)</span> so that <span class="math">\(x_{j + 1} \le 0\)</span> and, for <span class="math">\(1 \le i \le n-1\)</span>, <span class="math">\[x&#39;_i = \begin{cases}
+      x_i &amp; \text{if } i &lt; j, \\
+      x_i + x_{i + 1} &amp; \text{if } i = j, \text{and} \\
+      x_{i + 1} &amp; \text{if } i &gt; j.
+      \end{cases}\]</span></p>
+      <p><strong>Property 5</strong>  <em>If <span class="math">\(x&#39;\)</span> is a contraction of <span class="math">\(x\)</span>, then <span class="math">\(x&#39;\)</span> is sum-positive and <span class="math">\(\sigma(x&#39;) = \sigma(x)\)</span>.</em></p>
+      <p><strong>Proof</strong>  Suppose <span class="math">\(x&#39;_i = x_i + x_{i + 1}\)</span> and <span class="math">\(x_{i + 1} \le 0\)</span>.</p>
+      <p>(todo: rest of the proof)</p>
+      <p><span class="math">\(\Box\)</span></p>
       <h1 id="random-sequences"><span class="header-section-number">3</span> Random sequences</h1>
       <p>Add more content here.</p>
       <div class="references">
