--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -98,7 +98,12 @@
       x_{i + 1} &amp; \text{if } i &gt; j.
       \end{cases}\]</span></p>
       <p><strong>Property 5</strong>  <em>If <span class="math">\(x&#39;\)</span> is a contraction of <span class="math">\(x\)</span>, then <span class="math">\(x&#39;\)</span> is sum-positive and <span class="math">\(\sigma(x&#39;) = \sigma(x)\)</span>.</em></p>
-      <p><strong>Proof</strong>  Suppose <span class="math">\(x&#39;_i = x_i + x_{i + 1}\)</span> and <span class="math">\(x_{i + 1} \le 0\)</span>.</p>
+      <p><strong>Proof</strong>  Let <span class="math">\(j\)</span> be the contracted index, so that <span class="math">\(x&#39;_j = x_j + x_{j + 1}\)</span> and <span class="math">\(x_{j + 1} \le 0\)</span>.</p>
+      <p>Let <span class="math">\(s&#39;_i\)</span> denote the <span class="math">\(i^\text{th}\)</span> partial sum of <span class="math">\(x&#39;\)</span>. Then <span class="math">\[s&#39;_i = \begin{cases}
+      s_i &amp; \text{if } 0 \le i &lt; j \\
+      s_{i + 1} &amp; \text{if } j \le i \le n-1.
+      \end{cases}\]</span></p>
+      <p>So clearly <span class="math">\(s&#39;_i &gt; 0\)</span> for <span class="math">\(0 &lt; i \le n - 1\)</span>, making <span class="math">\(x&#39;\)</span> sum-positive.</p>
       <p>(todo: rest of the proof)</p>
       <p><span class="math">\(\Box\)</span></p>
       <h1 id="random-sequences"><span class="header-section-number">3</span> Random sequences</h1>
