--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -92,14 +92,30 @@
       <p>Imagine an observer standing far to the right of the graph and looking directly to the left so they can only see along a perfectly horizontal line of sight. Below <span class="math">\(s_n\)</span>, they can only see the three points <span class="math">\(s_0\)</span>, <span class="math">\(s_2\)</span>, and <span class="math">\(s_5\)</span>. These are exactly the partial sums meeting condition (2), so that they correspond directly to all the positive-sum shifts of <span class="math">\(x\)</span>, which have indexes 1, 3, and 6.</p>
       <p>This visual intuition — that points visible-from-the-right and below <span class="math">\(s_n\)</span> correspond exactly to the positive-sum shifts — extends to any sequence meeting the suppositions of property 4.</p>
       <p><strong>TEMP begin work on bounds</strong></p>
-      <p>It's now possible to prove a simple general upper and lower bound for <span class="math">\(\sigma(x)\)</span> in the case that each <span class="math">\(x_i\)</span> is an integer.</p>
+      <p>It's now possible to prove a simple general upper and lower bound for <span class="math">\(\sigma(x)\)</span> in the case that each <span class="math">\(x_i\)</span> is an integer. We'll see below that these bounds provide both lemmas 1 and 2 as corollaries.</p>
       <p><strong>Property 5</strong>  <em>Suppose we have a finite integer sequence <span class="math">\(x = \langle x_1, \ldots, x_n\rangle\)</span> with <span class="math">\(s_n &gt; 0\)</span>. Let <span class="math">\(m = \max_i x_i\)</span>. Then <span class="math">\[
       \lceil s_n / m \rceil \le \sigma(x) \le s_n.
       \]</span></em></p>
       <p><strong>Proof</strong>  Notice that we can work with any cyclic shift <span class="math">\(x&#39;\)</span> of <span class="math">\(x\)</span> without changing <span class="math">\(s_n\)</span> or <span class="math">\(m\)</span>. Thus, using property 3, we can assume without loss of generality that <span class="math">\(s_i &gt; 0\)</span> for <span class="math">\(i &gt; 0\)</span>.</p>
       <p>Next, we can bound the elements of <span class="math">\(S(x)\)</span> via <span class="math">\[
       0 &lt; \min_{j\le i\le n}s_i \le s_n
-      \]</span> for all <span class="math">\(j\)</span> with <span class="math">\(1\le j \le n\)</span>. So all elements of <span class="math">\(S(x)\)</span> are in the range <span class="math">\((0, s_n]\)</span>, and are integers. Hence <span class="math">\(\#S(x) \le s_n\)</span>, completing the proof of the upper bound. <span class="math">\(\Box\)</span></p>
+      \]</span> for all <span class="math">\(j\)</span> with <span class="math">\(1\le j \le n\)</span>. So all elements of <span class="math">\(S(x)\)</span> are in the range <span class="math">\((0, s_n]\)</span>, and are integers. Hence <span class="math">\(\#S(x) \le s_n\)</span>, completing the proof of the upper bound.</p>
+      <p>Toward the lower bound, let's suppose that <span class="math">\(S(x) = \{s_{j_1}, \ldots, s_{j_k}\}\)</span> with each <span class="math">\(s_{j_i}\)</span> meeting condition (2) and <span class="math">\(0 &lt; s_{j_i} &lt; s_{j_{i+1}}\)</span>; refer to the proof of property 4 for more details on why we can suppose these conditions.</p>
+      <p>By our definition of <span class="math">\(s_{j_i}\)</span>, we have <span class="math">\[
+      s_{j_i} = \min_{j_i \le k \le n}s_k
+      \;\text{ and }\;
+      s_{j_{i+1}} = \min_{j_i+1 \le k \le n}s_k.
+      \]</span> We also have <span class="math">\(s_{j_i+1} - s_{j_i} \le m\)</span>. Together, these last two facts tell us that <span class="math">\(s_{j_{i+1}} - s_{j_i} \le m\)</span>.</p>
+      <p>Note that <span class="math">\(s_{j_k}=s_n\)</span> so that <span class="math">\(s_n - s_{j_{k-1}} \le m \Rightarrow s_{j_{k-1}} \ge s_n - m\)</span>. This can be extended to see that <span class="math">\(s_{j_{k-2}} \ge s_n - 2m\)</span>, and in general that <span class="math">\[
+      s_{j_{k-p}} \ge s_n - pm.
+      \]</span></p>
+      <p>Our definition of <span class="math">\(m\)</span> gives us that <span class="math">\(s_{j_1} \le m\)</span>, so <span class="math">\(m \ge s_{j_1} \ge s_n - (k-1)m\)</span>, from which we can derive that <span class="math">\[
+      1 \ge s_n/m - (k - 1)
+      \quad \Rightarrow \quad
+      k \ge s_n/m
+      \quad \Rightarrow \quad
+      k \ge \lceil s_n/m \rceil;
+      \]</span> the last inequality uses the fact that <span class="math">\(k = \sigma(x)\)</span> is an integer. This completes the proof. <span class="math">\(\Box\)</span></p>
       <p><strong>TEMP end work on bounds</strong></p>
       <p><strong>The Contraction Perspective</strong></p>
       <p>Next we'll consider a contraction operation that may shorten a sequence <span class="math">\(x\)</span> while preserving <span class="math">\(\sigma(x)\)</span>.</p>
