--- a/raneys_lemmas/raneys_lemmas.html
+++ b/raneys_lemmas/raneys_lemmas.html
@@ -91,21 +91,23 @@
       </div>
       <p>Imagine an observer standing far to the right of the graph and looking directly to the left so they can only see along a perfectly horizontal line of sight. Below <span class="math">\(s_n\)</span>, they can only see the three points <span class="math">\(s_0\)</span>, <span class="math">\(s_2\)</span>, and <span class="math">\(s_5\)</span>. These are exactly the partial sums meeting condition (2), so that they correspond directly to all the positive-sum shifts of <span class="math">\(x\)</span>, which have indexes 1, 3, and 6.</p>
       <p>This visual intuition — that points visible-from-the-right and below <span class="math">\(s_n\)</span> correspond exactly to the positive-sum shifts — extends to any sequence meeting the suppositions of property 4.</p>
-      <p><strong>TEMP begin work on bounds</strong></p>
       <p>It's now possible to prove a simple general upper and lower bound for <span class="math">\(\sigma(x)\)</span> in the case that each <span class="math">\(x_i\)</span> is an integer. We'll see below that these bounds provide both lemmas 1 and 2 as corollaries.</p>
       <p><strong>Property 5</strong>  <em>Suppose we have a finite integer sequence <span class="math">\(x = \langle x_1, \ldots, x_n\rangle\)</span> with <span class="math">\(s_n &gt; 0\)</span>. Let <span class="math">\(m = \max_i x_i\)</span>. Then <span class="math">\[
       \lceil s_n / m \rceil \le \sigma(x) \le s_n.
       \]</span></em></p>
+      <p><strong>Proof idea</strong>  Here is the informal intuition behind the proof: We'll start by noticing that, for positive-sum <span class="math">\(x\)</span>, <span class="math">\(S(x) \subset (0, s_n]\)</span>; this is the basis used for the upper bound. The lower bound is based on the idea that each jump upwards from one <span class="math">\(s_i\in S(x)\)</span> to the next <span class="math">\(s_j\in S(x)\)</span> is limited by distance <span class="math">\(m\)</span>. The smallest element in <span class="math">\(S(x)\)</span> can be at most <span class="math">\(m\)</span> above <span class="math">\(s_0=0\)</span>, and the largest is necessarily <span class="math">\(s_n\)</span>, so that there must be at least <span class="math">\(s_n/m\)</span> elements between the extremes.</p>
       <p><strong>Proof</strong>  Notice that we can work with any cyclic shift <span class="math">\(x&#39;\)</span> of <span class="math">\(x\)</span> without changing <span class="math">\(s_n\)</span> or <span class="math">\(m\)</span>. Thus, using property 3, we can assume without loss of generality that <span class="math">\(s_i &gt; 0\)</span> for <span class="math">\(i &gt; 0\)</span>.</p>
       <p>Next, we can bound the elements of <span class="math">\(S(x)\)</span> via <span class="math">\[
       0 &lt; \min_{j\le i\le n}s_i \le s_n
       \]</span> for all <span class="math">\(j\)</span> with <span class="math">\(1\le j \le n\)</span>. So all elements of <span class="math">\(S(x)\)</span> are in the range <span class="math">\((0, s_n]\)</span>, and are integers. Hence <span class="math">\(\#S(x) \le s_n\)</span>, completing the proof of the upper bound.</p>
-      <p>Toward the lower bound, let's suppose that <span class="math">\(S(x) = \{s_{j_1}, \ldots, s_{j_k}\}\)</span> with each <span class="math">\(s_{j_i}\)</span> meeting condition (2) and <span class="math">\(0 &lt; s_{j_i} &lt; s_{j_{i+1}}\)</span>; refer to the proof of property 4 for more details on why we can suppose these conditions.</p>
+      <p>Toward the lower bound, let's suppose that <span class="math">\(S(x) = \{s_{j_1}, \ldots, s_{j_k}\}\)</span> with each <span class="math">\(s_{j_i}\)</span> meeting condition (2) and <span class="math">\(0 &lt; s_{j_i} &lt; s_{j_{i+1}}\)</span>. We know such <span class="math">\(s_{j_i}\)</span> exist as they are simply those partial sums in <span class="math">\(s_{j_i}\in S(x)\)</span> chosen so that <span class="math">\(j_i = \max_{1\le k\le n} \{k: s_k = s_{j_i}\}\)</span>.</p>
       <p>By our definition of <span class="math">\(s_{j_i}\)</span>, we have <span class="math">\[
       s_{j_i} = \min_{j_i \le k \le n}s_k
       \;\text{ and }\;
       s_{j_{i+1}} = \min_{j_i+1 \le k \le n}s_k.
-      \]</span> We also have <span class="math">\(s_{j_i+1} - s_{j_i} \le m\)</span>. Together, these last two facts tell us that <span class="math">\(s_{j_{i+1}} - s_{j_i} \le m\)</span>.</p>
+      \]</span> This means that <span class="math">\[s_{j_{i+1}} - s_{j_i} = \min_{j_i+1 \le k \le n}s_k - s_{j_i} \le
+      s_{j_i+1} - s_{j_i} \le
+      m.\]</span></p>
       <p>Note that <span class="math">\(s_{j_k}=s_n\)</span> so that <span class="math">\(s_n - s_{j_{k-1}} \le m \Rightarrow s_{j_{k-1}} \ge s_n - m\)</span>. This can be extended to see that <span class="math">\(s_{j_{k-2}} \ge s_n - 2m\)</span>, and in general that <span class="math">\[
       s_{j_{k-p}} \ge s_n - pm.
       \]</span></p>
@@ -116,7 +118,6 @@
       \quad \Rightarrow \quad
       k \ge \lceil s_n/m \rceil;
       \]</span> the last inequality uses the fact that <span class="math">\(k = \sigma(x)\)</span> is an integer. This completes the proof. <span class="math">\(\Box\)</span></p>
-      <p><strong>TEMP end work on bounds</strong></p>
       <p><strong>The Contraction Perspective</strong></p>
       <p>Next we'll consider a contraction operation that may shorten a sequence <span class="math">\(x\)</span> while preserving <span class="math">\(\sigma(x)\)</span>.</p>
       <p>Call a sequence <span class="math">\(x = \langle x_1, \ldots, x_n\rangle\)</span> <em>sum-positive</em> iff <span class="math">\(s_i &gt; 0\)</span> when <span class="math">\(i &gt; 0\)</span>. We'll say that a sequence <span class="math">\(x&#39; = \langle x&#39;_1, \ldots, x&#39;_{n-1} \rangle\)</span> is a <em>contraction</em> of the length-<span class="math">\(n\)</span> sum-positive sequence <span class="math">\(x\)</span> iff there is some index <span class="math">\(j\)</span> so that <span class="math">\(x_{j + 1} \le 0\)</span> and, for <span class="math">\(1 \le i \le n-1\)</span>, <span class="math">\[x&#39;_i = \begin{cases}
